[package]
name = "urlproxy"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
axum = "0.5"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.13"
reqwest = { version = "0.11", features = ["stream"]}
clap = { version = "4.0", features = ["derive"]}
